# nrf-impact-assessment-service

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  compose.yml  logging.json  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: check-pull-request.yml
app/: config.py  main.py  test_main.py
app/common/: http_client.py
app/example/: router.py
compose/: start-localstack.sh
docs/: architecture.md  cdp-adaptation.md  plan.md
docs/architecture/: README.md  base.c4  deployment.c4
tests/e2e/: test_worker_integration.py
worker/: __init__.py  config.py  health.py  main.py  state.py  utils.py  worker.py
