[project]
name = "nrf-impact-assessment-service"
version = "0.1.0"
description = "nrf-impact-assessment-service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.7",
    "boto3-stubs[sqs]==1.40.62",
    "ecs-logging==2.2.0",
    "flask>=3.1.0",
    "pydantic-settings>=2.9.1",
    "tenacity>=9.1.2",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
